--- a/ApiCrudPets.BLL/ApiCrudPets.BLL.csproj
+++ b/ApiCrudPets.BLL/ApiCrudPets.BLL.csproj
@@ -4,4 +4,18 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Owner\DTO\" />
+    <Folder Include="Models\Pet\DTO\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiCrudPets.DAL\ApiCrudPets.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
