Create_PetService_And_ResourceService

--- a/ApiCrudPets.BLL/ApiCrudPets.BLL.csproj
+++ b/ApiCrudPets.BLL/ApiCrudPets.BLL.csproj
@@ -11,11 +11,14 @@
 
   <ItemGroup>
     <Folder Include="Models\Owner\DTO\" />
-    <Folder Include="Models\Pet\DTO\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ApiCrudPets.DAL\ApiCrudPets.DAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
